gitops/namespace-webportal.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webportal
  annotations:
    argocd.argoproj.io/managed-by=openshift-operators
  labels:
    app: webportal
