gitops/service-webportal.yaml
kind: Service
apiVersion: v1
metadata:
  name: webportal
  namespace: vmimported-user1
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: webportal
