gitops/route-webportal.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    link.argocd.argoproj.io/external-link: "http://rt-webportal-webportal.apps.cluster-f4xq9.dynamic.redhatworkshops.io/"
  name: rt-webportal
  namespace: webportal
spec:
  path: /
  to:
    kind: Service
    name: svc-webportal
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
